# game-infrastructure

./: .gitignore  README.md  pg-connect.sh  start.txt
data-layer/deployment/: kustomization.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-pv.yaml  postgres-pvc.yaml
data-layer/game-service/: Cargo.toml  Rocket.yaml  test-api-calls.sh
data-layer/game-service/.cargo/: config.toml
data-layer/game-service/database-schema/: gameservice.sql
data-layer/game-service/src/: main.rs
data-layer/game-service/src/db/: mod.rs  models.rs  queries.rs
data-layer/game-service/src/errors/: app_errors.rs  mod.rs
gameclient/: Makefile  Makefile_win  Send-UdpDatagram.ps1
gameclient-fresh/: Makefile  Makefile_win
gameclient-fresh/src/cpp/: main.cpp
gameclient/include/glad/: gl.h
gameclient/src/cpp/: main.cpp
gameclient/src/cpp/win32/: collision.cpp  helpers.cpp  main.cpp  server_communication.cpp  structs.h  typedefs.h
gameserver/: Makefile
gameserver-rust/: Cargo.toml
gameserver-rust/src/: main.rs
gameserver/docker/: Dockerfile  docker-run.sh
gameserver/src/cpp/: http_handler.cpp  http_handler.h  json_helpers.cpp  main.cpp  option.h  utils.cpp
