[package]
name = "game-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
#rocket_contrib = { version = "0.4.9", features = ["postgres_pool"] }
serde = "*"
sha2 = "0.10.2"
postgres = "0.19.3"
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.6.1", features = ["net", "sync", "time"] }
uuid = { version = "1.1.2", features = ["serde", "v4", "fast-rng"] }
chrono = "*"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["deadpool_postgres"]
